--- a/index.html
+++ b/index.html
@@ -12,6 +12,52 @@
     />
   </head>
   <body>
+    <div class="container-fluid">
+      <!--Nav-->
+      <div class="row flex-nowrap">
+        <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
+          <div
+            class="
+              d-flex
+              flex-column
+              align-items-center align-items-sm-start
+              px-3
+              pt-2
+              text-white
+              min-vh-100
+            "
+          >
+            <ul
+              class="
+                nav nav-pills
+                flex-column
+                mb-sm-auto mb-0
+                align-items-center align-items-sm-start
+              "
+              id="menu"
+            >
+              <li class="nav-item">
+                <a href="#" class="nav-link align-middle px-0" id="home">
+                  <i class="fs-4 bi-house"></i>
+                  <span class="ms-1 d-none d-sm-inline">Home</span>
+                </a>
+              </li>
+
+              <li>
+                <a href="#" class="nav-link px-0 align-middle" id="seach">
+                  <i class="fs-4 bi-search"></i>
+                  <span class="ms-1 d-none d-sm-inline">Search</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!--Fin Nav-->
+
+      <div class="col py-3"></div>
+    </div>
+
     <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
   </body>
