--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <div class="container-fluid">
-      <!--Nav-->
       <div class="row flex-nowrap">
+        <!--Nav-->
         <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
           <div
             class="
@@ -52,12 +52,13 @@
             </ul>
           </div>
         </div>
+        <!--Fin Nav-->
+        <div id="home" class="col-11 text-center mt-1">
+          <h1>La Aplicacion del Tiempo</h1>
+          <h3>Conoce El tiempo al momento</h3>
+        </div>
       </div>
-      <!--Fin Nav-->
-
-      <div class="col py-3"></div>
     </div>
-
     <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
   </body>
