--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
+    <link rel="stylesheet" href="css/style.css"
   </head>
   <body>
     <div class="container-fluid">
