v2: implementacion de localizacion

--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,12 @@
                   <span class="ms-1 d-none d-sm-inline">Search</span>
                 </a>
               </li>
+              <li>
+                <a href="#" class="nav-link px-0 align-middle" id="btnlocation">
+                  <i class="fs-4 bi-geo-alt-fill"></i>
+                  <span class="ms-1 d-none d-sm-inline">Location</span>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -74,6 +80,9 @@
             Buscar Varios Dias
           </button>
           <div id="result"></div>
+        </div>
+        <div id="location">
+          <div id="resultLocation"></div>
         </div>
       </div>
     </div>
